Smaller youtube player on mobile, fix mobile header height

--- a/frontend/app/src/components/Header/style.scss
+++ b/frontend/app/src/components/Header/style.scss
@@ -57,7 +57,7 @@
     overflow: hidden;
   }
   padding: 10px;
-  height: 8vh;
+  height: auto;
   background: $junction-black;
 
   .HeaderMobileRow {
