--- a/frontend/app/src/pages/Connected/Home/style.scss
+++ b/frontend/app/src/pages/Connected/Home/style.scss
@@ -69,7 +69,7 @@
       padding: 20px;
     }
     &--inside {
-      height: 100vh;
+      height: 50vh;
       width: 90%;
       display: flex;
       flex-direction: column;
@@ -135,6 +135,10 @@
     justify-content: space-between;
     display: flex;
     flex-direction: column;
+
+    p {
+      text-align: center;
+    }
 
     .challengesImage {
       width: 80%;
@@ -325,6 +329,7 @@
       margin: 0;
       &.visible {
         .HubName {
+          cursor: default;
           color: $connected-teal;
         }
         .HubDetails {
@@ -338,6 +343,9 @@
         .LocalTime {
           display: inline-block;
           color: $connected-teal;
+          @include bp-small-only {
+            display: none;
+          }
         }
       }
 
@@ -346,6 +354,7 @@
       }
 
       .HubName {
+        cursor: pointer;
         color: $connected-orange;
         text-decoration: underline;
         margin-right: 0.3em;
@@ -357,8 +366,11 @@
       .HubDetails {
         display: none;
         p {
-          text-align: left;
           color: $connected-teal;
+          @include bp-small-only {
+            text-align: center;
+          }
+          text-align: left;
         }
 
         &--country {
